force-app/main/default/objects/OD_SCH_WT__c/OD_SCH_WT__c.object-meta.xml
<CustomObject>
    <label>Pipe Diameter–Wall Thickness Mapping</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OD_SCH_WT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>