force-app/main/default/objects/OD_SCH_WT__c/fields/ProdTechRefOD__c.field-meta.xml
<CustomField>
    <fullName>ProdTechRefOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Tech Ref OD</label>
    <referenceTo>ProdTechRefDetails__c</referenceTo>
    <relationshipLabel>ProdTechRefOD</relationshipLabel>
    <relationshipName>OD_SCH_WT</relationshipName>
    <type>Lookup</type>
</CustomField>