force-app/main/default/objects/OD_SCH_WT__c/fields/ProdTechRefWT__c.field-meta.xml
<CustomField>
    <fullName>ProdTechRefWT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Tech Ref WT</label>
    <referenceTo>ProdTechRefDetails__c</referenceTo>
    <relationshipLabel>ProdTechRefWT</relationshipLabel>
    <relationshipName>ProdTechRefWT</relationshipName>
    <type>Lookup</type>
</CustomField>