force-app/main/default/objects/OD_SCH_WT__c/fields/SCH__c.field-meta.xml
<CustomField>
    <fullName>SCH__c</fullName>
    <label>SCH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SCH</valueSetName>
    </valueSet>
</CustomField>