force-app/main/default/objects/OD_SCH_WT__c/fields/TubeOD__c.field-meta.xml
<CustomField>
    <fullName>TubeOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube OD</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipName>OD_SCH_WT</relationshipName>
    <type>Lookup</type>
</CustomField>