force-app/main/default/objects/OD_SCH_WT__c/fields/TubeWT__c.field-meta.xml
<CustomField>
    <fullName>TubeWT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tube WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipName>OD_SCH_WT</relationshipName>
    <type>Lookup</type>
</CustomField>