force-app/main/default/objects/OD_SCH_WT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TubeOD__c</columns>
    <columns>TubeWT__c</columns>
    <columns>SCH__c</columns>
    <columns>ProdTechRefOD__c</columns>
    <columns>ProdTechRefWT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>